# mysql

./: README.md
sqlite-autoconf-3310100/: build.sh
sqlite-autoconf-3310100/test/: CMakeLists.txt  delete  delete.c  insert  insert.c  opendbsqlite.c  query  query.c  test.sh  test_6.4.sh  zieckey.db
